--- a/src/GSvar/GSvar.qrc
+++ b/src/GSvar/GSvar.qrc
@@ -127,5 +127,6 @@
         <file>Icons/NovaSeqX.png</file>
         <file>Icons/multithreading.png</file>
         <file>Icons/wt_pathogenic.png</file>
+        <file>Icons/GeneReviews.png</file>
     </qresource>
 </RCC>
