--- a/src/GSvar/CnvWidget.ui
+++ b/src/GSvar/CnvWidget.ui
@@ -88,6 +88,9 @@
             <iconset resource="GSvar.qrc">
              <normaloff>:/Icons/Resize_colums.png</normaloff>:/Icons/Resize_colums.png</iconset>
            </property>
+           <property name="popupMode">
+            <enum>QToolButton::InstantPopup</enum>
+           </property>
           </widget>
          </item>
          <item>
