--- a/src/GSvar/GSvar.qrc
+++ b/src/GSvar/GSvar.qrc
@@ -128,6 +128,7 @@
         <file>Icons/multithreading.png</file>
         <file>Icons/wt_pathogenic.png</file>
         <file>Icons/GeneReviews.png</file>
+        <file>Icons/Export.png</file>
         <file>Icons/HerediVar.png</file>
     </qresource>
 </RCC>
