GSvar: added ProteinAtlas link for genes

--- a/src/GSvar/GSvar.qrc
+++ b/src/GSvar/GSvar.qrc
@@ -130,5 +130,6 @@
         <file>Icons/GeneReviews.png</file>
         <file>Icons/Export.png</file>
         <file>Icons/HerediVar.png</file>
+        <file>Icons/ProteinAtlas.png</file>
     </qresource>
 </RCC>
